Added updates section to main page

--- a/index.html
+++ b/index.html
@@ -23,3 +23,10 @@ featured_image: /assets/img/home-background/home-background.jpg
       </div>
     </div>
   </div>
+
+  <script>
+  	var ps_config = {
+  		productId : "42cffa40-c396-47c7-b040-66d1d061b008"
+  	};
+  </script>
+  <script type="text/javascript" src="https://app.productstash.io/js/productstash-embed.js" defer="defer"></script>
