--- a/index.html
+++ b/index.html
@@ -6,24 +6,37 @@ description: Decentralized digital identity platform
 description: idemeum blog
 featured_image: /assets/img/home-background/home-background.jpg
 ---
-<header class="header-1 fullWidth">
-    <div class="page-header">
-      <div class="page-header-image" style="background-image: url('{{ '/assets/img/home-background/home-background.png' | relative_url }}')"></div>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-5 col-md-7 mr-auto text-left d-flex justify-content-center flex-column">
-            <p class="lead mt-0">idemeum</p>
-            <h3 class="display-3">Making digital identity simple, secure, and private.</h3>
-            <div class="buttons">
-              <a href="/contact" class="btn btn-primary">
-                Want to learn more?
-              </a>
+
+
+<header class="header-5 fullWidth bg-primary">
+  <div class="page-header">
+    <div class="container">
+      <div class="row align-items-center text-left">
+        <div class="col-lg-5 col-12">
+          <h1 class="display-1" style="color: #B1C9F9;">idemeum</h1>
+          <h1 class="display-3" style="color: #FFFFFF;">Digital identity for the online world</h1>
+
+          <p class="lead pb-4" style="color: white;">We are on a mission to make digital identity <span class="lead">simple</span>, secure, and private.</p>
+          <div class="row row-input">
+            <div class="col-sm-12 col-12">
+              <a href="/contact"><button type="submit" class="btn btn-icon btn-success">
+                <span class="btn-inner--icon"><i class="ni ni-mobile-button"></i></span>
+                <span class="btn-inner--text">Get a demo</span>
+              </button></a>
+              <a href="/docs"><button type="submit" class="btn btn-outline-white">
+                <span class="btn-inner--text">Docs</span>
+              </button></a>
             </div>
           </div>
         </div>
+        <div class="col-lg-7 col-12 pl-0">
+          <img class="ml-lg-5" src="{{ '/assets/img/home-background/home-background.png' | relative_url }}" width="100%">
+        </div>
       </div>
     </div>
-  </header>
+  </div>
+</header>
+
 
 
 {% include /landing-page/idemeum.html %}
