Updated landing page

--- a/index.html
+++ b/index.html
@@ -39,11 +39,14 @@ featured_image: /assets/img/home-background/home-background.jpg
 
 
 
-{% include /landing-page/idemeum.html %}
-{% include /landing-page/passwordless-intro.html %}
-{% include /landing-page/verification-intro.html %}
-{% include /landing-page/privacy-intro.html %}
-{% include /landing-page/overload.html %}
+{% include /landing-page/decentralized.html %}
+{% include /landing-page/verified.html %}
+{% include /landing-page/mobile.html %}
+{% include /landing-page/setup.html %}
+{% include /landing-page/demo-request.html %}
+
+
+
 
 
   <script>
