--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@ layout: default
 title: Home
 subtitle: Decentralized digital identity platform
 description: Decentralized digital identity platform
-description: idemeum blog
 featured_image: /assets/img/home-background/home-background.jpg
 ---
 
 
 <header class="header-5 fullWidth bg-primary">
-  <div class="page-header">
+  <div class="page-header page-header-small">
     <div class="container">
       <div class="row align-items-center text-left">
         <div class="col-lg-5 col-12">
