--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ featured_image: /assets/img/home-background/home-background.jpg
 
 
 <header class="header-5 fullWidth bg-primary">
-  <div class="page-header page-header-small">
+  <div class="page-header">
     <div class="container">
       <div class="row align-items-center text-left">
         <div class="col-lg-5 col-12">
