--- a/index.html
+++ b/index.html
@@ -6,16 +6,14 @@ description: Decentralized digital identity platform
 featured_image: /assets/img/home-background/home-background.jpg
 ---
 
-
-<header class="header-5 fullWidth bg-primary">
-  <div class="page-header">
+<header class="header-2 fullWidth bg-primary">
+  <div class="page-header page-header-small">
     <div class="container">
       <div class="row align-items-center text-left">
-        <div class="col-lg-5 col-12">
-          <h1 class="display-1" style="color: #B1C9F9;">idemeum</h1>
-          <h1 class="display-3" style="color: #FFFFFF;">Digital identity for the online world</h1>
-
-          <p class="lead pb-4" style="color: white;">We are on a mission to make digital identity <span class="lead">simple</span>, secure, and private.</p>
+        <div class="col-lg-6 col-12">
+          <h3 class="display-2" style="color: #B1C9F9; margin-bottom: 0;">idemeum</h3>
+          <h4 class="display-4" style="color: #FFFFFF; margin-bottom: 0;">Digital identity for the online world</h4>
+          <p class="lead" style="color: white;">We are on a mission to make digital identity simple, secure, and private.</p>
           <div class="row row-input">
             <div class="col-sm-12 col-12">
               <a href="/contact"><button type="submit" class="btn btn-icon btn-success">
@@ -28,7 +26,7 @@ featured_image: /assets/img/home-background/home-background.jpg
             </div>
           </div>
         </div>
-        <div class="col-lg-7 col-12 pl-0">
+        <div class="col-lg-6 col-12 pl-0">
           <img class="ml-lg-5" src="{{ '/assets/img/home-background/home-background.png' | relative_url }}" width="100%">
         </div>
       </div>
