--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ featured_image: /assets/img/home-background/home-background.jpg
 ---
 
 <header class="header-2 fullWidth bg-primary">
-  <div class="page-header page-header-small" style="min-height: 60vh">
+  <div class="page-header page-header-small" style="min-height: 750px">
     <div class="container">
       <div class="row align-items-center text-left">
         <div class="col-lg-6 col-12">
