updated the image for how to scan

--- a/qr-page/index.html
+++ b/qr-page/index.html
@@ -15,7 +15,6 @@ title: Login page
           <h3 class="display-2" style="color: #B1C9F9;">idemeum</h3>
         </div>
       </div>
-
                   <div class="row no-gutters howtoscan">
                       <div class="col-md-7 p-3 bg-white home">
                           <div class="d-md-flex h-100 align-items-center p-5 justify-content-center">
@@ -52,7 +51,7 @@ title: Login page
                                 <h4 class="white_clr">Scan code with idemeum app</h4>
                             </div>
                             <div class="col-sm-12 mt-3">
-                                <img src="./assets/images/qr-code-scan.svg" />
+                                <img src="./assets/images/qr-code-scan.png" />
                             </div>
 
                         </div>
@@ -147,8 +146,6 @@ title: Login page
                               </div>
                           </div>
                       </div>
-
-
 
         </div>
       </div>
