--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ featured_image: /assets/img/home-background/home-background.jpg
       <div class="col-lg-12 mx-auto">
         <h6 class="text-uppercase">That is why</h6>
         <h3 class="display-3">We built decentralized, verified, mobile, identity platform</h3>
-        <p>We call is DVMI for short. As we care about people's privacy, we made idemeum decentralized. To ensure trust and security idemeum has identity verification built in. And to achieve frictionless user experience we designed idemeum to be mobile-first.
+        <p>We call it DVMI for short. As we care about people's privacy, we made idemeum decentralized. To ensure trust and security idemeum has identity verification built in. And to achieve frictionless user experience we designed idemeum to be mobile-first.
         </p>
     </div>
   </div>
