Added verified identity blog post

--- a/index.html
+++ b/index.html
@@ -195,3 +195,13 @@ featured_image: /assets/img/home-background/home-background.jpg
       });
   });
 </script>
+
+<!-- ProductStash update widget -->
+<script>
+var ps_config = {
+  productId : "14b9ac14-36fe-482d-8886-252744c3c747"
+};
+</script>
+
+<script type="text/javascript" src="https://app.productstash.io/js/productstash-embed.js" defer="defer">
+</script>
