--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ featured_image: /assets/img/home-background/home-background.jpg
 
 <div class="section">
   <div class="container">
-    <div class="row">
+    <div class="row" style="flex-wrap: wrap-reverse;">
       <div class="col-lg-6">
         <div class="image-container">
           <img src="./assets/img/landing/onboarding-overview.png" alt="Decentralized platform">
