--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ featured_image: /assets/img/home-background/home-background.jpg
           </div>
         </div>
       </div>
-      <div class="col-lg-6 d-flex justify-content-center flex-column">
+      <div class="col-lg-6 d-flex flex-column">
         <h3 class="display-4">Complete identity privacy</h3>
         <p>With digital identity we traded off privacy - our data is stored across myriad of centralized databases, and every authentication using social login is tracked and analyzed. That's why we designed idemeumt to be decentralized. idemeum stores zero personally identifiable information in the backend.
         </p>
@@ -46,7 +46,7 @@ featured_image: /assets/img/home-background/home-background.jpg
 <div class="section">
   <div class="container">
     <div class="row">
-      <div class="col-lg-6 d-flex justify-content-center flex-column">
+      <div class="col-lg-6 d-flex flex-column">
         <h3 class="display-4">Every interaction is trusted</h3>
         <p>Identity fraud is at an all time high - billions in financial losses every year, and devastating consequences of identity theft for people's lives. That's why we designed idemeum to have all identity claims verified. idemeum makes every login and every interaction trusted.
         </p>
@@ -86,7 +86,7 @@ featured_image: /assets/img/home-background/home-background.jpg
           </div>
         </div>
       </div>
-      <div class="col-lg-6 d-flex justify-content-center flex-column">
+      <div class="col-lg-6 d-flex flex-column">
         <h3 class="display-4">Strong passwordless authentication</h3>
         <p>We keep relying on passwords that never protect us - billions of accounts compromised and released every year. That's why we designed idemeum to leverage modern authentication protocols and use mobile device as authenticator. idemeum removes passwords from the equation - your phone is your digital identity.
         </p>
