Updated landing page

--- a/index.html
+++ b/index.html
@@ -6,90 +6,76 @@ subtitle: Decentralized digital identity platform
 description: Decentralized digital identity platform
 featured_image: /assets/img/home-background/home-background.jpg
 ---
-<!-- What is DVMI? It is explained there -->
+
+<!-- What is idemeum intro -->
 <div class="section">
   <div class="container">
     <div class="row">
-      <div class="col-lg-12 mx-auto">
+      <div class="col-lg-5 mx-auto justify-content-center d-flex flex-column">
         <h6 class="text-uppercase">What is idemeum?</h6>
-        <h3 class="display-3">Decentralized Verified Mobile Identity Platform</h3>
-        <p>We are passionate about making digital identity radically better. To do that we designed Decentralized, Verified, Mobile Digital Identity Platform.</p>
+        <h3 class="display-3">idemeum is your digital identity</h3>
+        <p class="lead">idemeum turns your mobile device into personal universal digital identity. It eliminates passwords, protects you against identity fraud, and enables 100% privacy.</p>
+      </div>
+      <div class="col-lg-7 mx-auto">
+        <div class="image-container">
+          <img src="./assets/img/landing/phone-intro.png">
+        </div>
       </div>
     </div>
   </div>
+</div>
 
-  <div class="container mt-4">
-    <div class="row" style="flex-wrap: wrap-reverse;">
-      <div class="col-lg-6">
+<div class="section">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <h6 class="text-uppercase">How does it work?</h6>
+        <h3 class="display-3">We do things differently</h3>
+        <p class='lead'>We are passionate about making digital identity radically better. Meet Decentralzied, Verified, Mobile Identity Platform.</p>
+      </div>
+    </div>
+    <div class="row mt-4">
+      <div class="col-lg-4 d-flex align-items-stretch">
         <div class="card bg-gradient-success">
           <div class="card-body">
-            <h6 class="category text-white"><i class="fa fa-arrows-alt"></i> Architecture</h6>
+            <h6 class="category text-white"><i class="fa fa-arrows-alt"></i></h6>
             <h4 class="card-title text-white">Decentralized</h4>
-            <p class="card-description text-white">idemeum gives people power to own and control their digital identity.</p>
+            <p class="card-description text-white">All user information is stored safely and securely on users' mobile devices. We store zero PII information in our backend.</p>
             <div class="card-footer">
               <div class="author">
-                <span>We make identity secure and private.</span>
+                <span>idemeum is private by design.</span>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="col-lg-6 d-flex flex-column">
-        <h3 class="display-4">Complete identity privacy</h3>
-        <p>With digital identity we traded off privacy - our data is stored across myriad of centralized databases, and every authentication using social login is tracked and analyzed. That's why we designed idemeumt to be decentralized. idemeum stores zero personally identifiable information in the backend.
-        </p>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="section">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-6 d-flex flex-column">
-        <h3 class="display-4">Every interaction is trusted</h3>
-        <p>Identity fraud is at an all time high - billions in financial losses every year, and devastating consequences of identity theft for people's lives. That's why we designed idemeum to have all identity claims verified. idemeum makes every login and every interaction trusted.
-        </p>
-      </div>
-      <div class="col-lg-6">
+      <div class="col-lg-4 d-flex align-items-stretch">
         <div class="card bg-gradient-warning">
           <div class="card-body">
-            <h6 class="category text-white"><i class="fa fa-id-card-o"></i> Trust</h6>
+            <h6 class="category text-white"><i class="fa fa-id-card-o"></i></h6>
             <h4 class="card-title text-white">Verified</h4>
-            <p class="card-description text-white">idemeum verifies all user information to ensure that the user is who he says he is.</p>
+            <p class="card-description text-white">When users create their identity, we remotely verify all information, such as email address, phone number, and ID document..</p>
             <div class="card-footer">
               <div class="author">
-                <span>We reduce identity fraud.</span>
+                <span>We reduce identity fraud and increase online trust. </span>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
-</div>
-
-<div class="section">
-  <div class="container mt-4">
-    <div class="row" style="flex-wrap: wrap-reverse;">
-      <div class="col-lg-6">
+      <div class="col-lg-4 d-flex align-items-stretch">
         <div class="card bg-gradient-info">
           <div class="card-body">
-            <h6 class="category text-white"><i class="fa fa-id-card-o"></i> Authentication</h6>
+            <h6 class="category text-white"><i class="fa fa-phone-square"></i></h6>
             <h4 class="card-title text-white">Mobile</h4>
-            <p class="card-description text-white">Mobile device is your multifactor FIDO2 based authenticator.</p>
+            <p class="card-description text-white">Mobile device replaces passwords and becomes universal digital identity. To access resources users leverage cryptography and biometric sensors on their devices.</p>
             <div class="card-footer">
               <div class="author">
-                <span>We eliminate passwords.</span>
+                <span>We simplify user experience.</span>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="col-lg-6 d-flex flex-column">
-        <h3 class="display-4">Strong passwordless authentication</h3>
-        <p>We keep relying on passwords that never protect us - billions of accounts compromised and released every year. That's why we designed idemeum to leverage modern authentication protocols and use mobile device as authenticator. idemeum removes passwords from the equation - your phone is your digital identity.
-        </p>
       </div>
     </div>
   </div>
@@ -107,9 +93,9 @@ featured_image: /assets/img/home-background/home-background.jpg
     </div>
   </div>
     <div class="row">
-      <div class="col-lg-6 col-12 bg-warning justify-content-center flex-column d-flex">
-        <h4 class="text-neutral mb-4 mt-5 ml-4 mr-4">Over 80% of hacking breaches involve brute force or the use of lost or stolen credentials.</h4>
-        <p class="text-neutral mb-5 ml-4 mr-4" style="font-size: 1rem;"> - <a class="link-white" target="_blank" href="https://enterprise.verizon.com/resources/reports/dbir/">Verizon 2020 DBIR</a></p>
+      <div class="col-lg-6 col-12 bg-neutral justify-content-center flex-column d-flex">
+        <h4 class="text-default mb-4 mt-5 ml-4 mr-4">Over 80% of hacking breaches involve brute force or the use of lost or stolen credentials.</h4>
+        <p class="text-default mb-5 ml-4 mr-4" style="font-size: 1rem;"> - <a class="link-default" target="_blank" href="https://enterprise.verizon.com/resources/reports/dbir/">Verizon 2020 DBIR</a></p>
       </div>
       <div class="col-lg-6 col-12 bg-default justify-content-center flex-column d-flex">
         <h4 class="text-neutral mb-4 mt-5 ml-4 mr-4"> Up to 73% of users duplicate their passwords in both their personal and work accounts.</h4>
@@ -124,8 +110,8 @@ featured_image: /assets/img/home-background/home-background.jpg
   <div class="container">
     <div class="row">
       <div class="col-lg-12 mx-auto">
-        <h6 class="text-uppercase">idemeum use cases</h6>
-        <h3 class="display-3">How does idemeum help you?</h3>
+        <h6 class="text-uppercase">How does idemeum help?</h6>
+        <h3 class="display-3">Enterprise identity use cases</h3>
         <p>Explore how idemeum platform can help your business to secure digital identity, reduce fraud, and enable cross-platform experience that your users will love.
       </div>
     </div>
