Updated the pages for login design

--- a/login/index.html
+++ b/login/index.html
@@ -25,6 +25,7 @@ title: Login page
               </button>
             </div>
           </div>
+          <p class="text-neutral mt-4"><strong><a href="/qr-page/" class="link-white">Show QR code</a></strong></p>
         </div>
       </div>
     </div>
