--- a/qr-page/index.html
+++ b/qr-page/index.html
@@ -133,12 +133,19 @@ title: Login page
                                       </div>
                                       <div class="col-sm-12 mt-4">
 
-                                        <button class="btn btn-icon btn-neutral a_howtoscan" type="button" href="#">
-                                        	<span class="btn-inner--icon"><i class="fa fa-qrcode"></i></span>
+                                      <button type="button" class="btn btn-link text-white a_howtoscan">How to scan?</button>
 
-                                            <span class="btn-inner--text">How to scan</span>
 
-                                        </button>
+
+                                      </div>
+
+                                      <div class="col-sm-12" style="text-align: center">
+                                        <ul class="list-style">
+                                            <li style="display: flex; align-items: center; margin: 0 5px"><label class="custom-toggle custom-toggle-white">
+                                              <input type="checkbox" checked="">
+                                              <span class="custom-toggle-slider rounded-circle" data-label-off="OFF" data-label-on="ON"></span>
+                                            </label><span class="text-white" style='padding-left:5px;'>Use notification next time</span></li>
+                                        </ul>
 
                                       </div>
 
