--- a/qr-page/index.html
+++ b/qr-page/index.html
@@ -142,7 +142,7 @@ title: Login page
                                       <div class="col-sm-12" style="text-align: center">
                                         <ul class="list-style">
                                             <li style="display: flex; align-items: center; margin: 0 5px"><label class="custom-toggle custom-toggle-white">
-                                              <input type="checkbox" checked="">
+                                              <input type="checkbox">
                                               <span class="custom-toggle-slider rounded-circle" data-label-off="OFF" data-label-on="ON"></span>
                                             </label><span class="text-white" style='padding-left:5px;'>Use notification next time</span></li>
                                         </ul>
