--- a/index.html
+++ b/index.html
@@ -7,3 +7,12 @@ description: Decentralized digital identity platform
 featured_image: /assets/img/home-background/home-background.jpg
 ---
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-03VFJJMTJ1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-03VFJJMTJ1');
+</script>
