Updated index page

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ featured_image: /assets/img/home-background/home-background.jpg
       <div class="col-lg-4 d-flex align-items-stretch">
         <div class="card bg-gradient-default">
           <div class="card-body">
-            <h4 class="card-title text-white">User-centric</h4>
+            <h4 class="card-title text-white">Single Sign-on</h4>
             <p class="card-description text-white">With Single Sign-On across domains and apps your users will love the experience. They won't even notice it.</p>
           </div>
         </div>
