--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ featured_image: /assets/img/home-background/home-background.jpg
 <div class="section">
   <div class="container">
     <div class="row">
-      <div class="col-lg-12 mx-auto text-center mt-9 mb-9">
+      <div class="col-lg-12 mx-auto text-center mt-7 mb-7">
         <h3 class="display-1">idemeum, because you do not have time for app busywork.</h3>
        </div>
     </div>
@@ -29,48 +29,54 @@ featured_image: /assets/img/home-background/home-background.jpg
         <p class="lead">Manage employee onboarding, offboarding, identity and access control, and everything in between with all-in-one platform.</p>
 	  </div>
     </div>
-    <div class="row">
-          <div class="col-md-6 col-lg-4">
-            <div class="card text-white bg-default">
-              <img class="card-img" src="./assets/img/ill/inn.svg" alt="Card image">
-              <div class="card-img-overlay d-flex align-items-center">
-                <div class="content">
-                  <h5 class="h2 card-title text-white mb-2">Employee onboarding</h5>
-                  <p class="card-description">Automatically give employees access to all they need.</p>
-                  <a class="link-white font-weight-bold">Learn more</a>
-                </div>
+
+	<div class="row justify-content-center">
+		  <div class="col-lg-5">
+          	<div class="card text-white bg-default">
+            	<img class="card-img" src="./assets/img/ill/inn.svg" alt="Card image">
+            <div class="card-img-overlay d-flex align-items-center">
+              <div class="content">
+                <h5 class="h2 card-title text-white mb-2">Employee onboarding</h5>
+                <p class="card-description">Automatically give employees access to all they need.</p>
+                <a href="/onboarding" class="link-white font-weight-bold">Learn more</a>
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="card text-white bg-primary">
-              <img class="card-img" src="./assets/img/ill/inn.svg" alt="Card image">
-              <div class="card-img-overlay d-flex align-items-center">
-                <div class="content">
-                  <h5 class="h2 card-title text-white mb-2">Passwordless access control</h5>
-                  <p class="card-description">Manage who and how gets access to applications.</p>
-                  <a class="link-white font-weight-bold">Learn more</a>
-                </div>
+	  </div>
+        <div class="col-lg-5">
+          <div class="card text-white bg-primary">
+            <img class="card-img" src="./assets/img/ill/inn.svg" alt="Card image">
+            <div class="card-img-overlay d-flex align-items-center">
+              <div class="content">
+                <h5 class="h2 card-title text-white mb-2">Passwordless access</h5>
+                <p class="card-description">Manage who and how gets access to applications.</p>
+                <a class="link-white font-weight-bold">Learn more</a>
               </div>
             </div>
+          </div>
+		 </div>
+	</div>
+
+	<div class="row justify-content-center">
+        <div class="col-lg-5">
+          <div class="card text-white bg-success">
+            <img class="card-img" src="./assets/img/ill/inn.svg" alt="Card image">
+            <div class="card-img-overlay d-flex align-items-center">
+              <div class="content">
+                <h5 class="h2 card-title text-white mb-2">Application visibility</h5>
+                <p class="card-description">Learn how applications are used and how much you spend.</p>
+                <a class="link-white font-weight-bold">Coming soon</a>
+              </div>
+            </div>
+          </div>
+        </div>
+          <div class="col-lg-5">
             <div class="card text-white bg-info">
               <img class="card-img" src="./assets/img/ill/inn.svg" alt="Card image">
               <div class="card-img-overlay d-flex align-items-center">
                 <div class="content">
                   <h5 class="h2 card-title text-white mb-2">Employee experience</h5>
                   <p class="card-description">Make your employees more productive with mobile tools.</p>
-                  <a class="link-white font-weight-bold">Coming soon</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="card text-white bg-success">
-              <img class="card-img" src="./assets/img/ill/inn.svg" alt="Card image">
-              <div class="card-img-overlay d-flex align-items-center">
-                <div class="content">
-                  <h5 class="h2 card-title text-white mb-2">Application visibility</h5>
-                  <p class="card-description">Learn how applications are used and how much you spend.</p>
                   <a class="link-white font-weight-bold">Coming soon</a>
                 </div>
               </div>
@@ -85,7 +91,7 @@ featured_image: /assets/img/home-background/home-background.jpg
 <div class="section">
   <div class="container">
     <div class="row">
-      <div class="col-lg-12 mx-auto text-center mt-9 mb-9">
+      <div class="col-lg-12 mx-auto text-center mt-7 mb-7">
         <h3 class="display-1">Experience a better way to manage your applications.</h3>
        </div>
     </div>
@@ -124,6 +130,7 @@ featured_image: /assets/img/home-background/home-background.jpg
             <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
               <div class="card-body opacity-8">idemeum connects to your HR system to automatically onboard employees without IT admin involvement. Ask an employee to install mobile app and self-onboard into your organization. No need to distribute passwords, no need to manually provision applications. We take care of that.
               </div>
+			  <a href="/onboarding" class="link-white font-weight-bold">Learn more</a>
             </div>
           </div>
           <div class="card">
