--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ featured_image: /assets/img/home-background/home-background.jpg
   <div class="container">
     <div class="row">
       <div class="col-lg-12 mx-auto text-center mt-7 mb-7">
-        <h3 class="display-1">idemeum, because you do not have time for app busywork.</h3>
+        <h3 class="display-2">Do you really have time for manual SaaS app management <span class="font-tertiary-large" style="display: inline; color: #3E79F1;">busywork?</span></h3>
        </div>
     </div>
   </div>
@@ -24,33 +24,32 @@ featured_image: /assets/img/home-background/home-background.jpg
 <div class="section" style="background-image: url('./assets/img/cards1.jpg');">
   <div class="container">
     <div class="row">
-      <div class="col-lg-8 mx-auto text-center">
-        <h3 class="display-3">One SaaS platform to manage it all</h3>
-        <p class="lead">Manage employee onboarding, offboarding, identity and access control, and everything in between with all-in-one platform.</p>
-	  </div>
+      <div class="col-lg-10 mx-auto text-center">
+        <h3 class="display-3">One platform to manage your corporate applications</h3>
+        <p class="lead">Automate employee IT onboarding, implement passwordless Single Sign-On and MFA, secure the devices accessing your applications and everything in between. We make it simple.</div>
     </div>
 
 	<div class="row justify-content-center">
-		  <div class="col-lg-5">
+		  <div class="col-lg-4">
           	<div class="card text-white bg-default">
             	<img class="card-img" src="./assets/img/ill/inn.svg" alt="Card image">
             <div class="card-img-overlay d-flex align-items-center">
               <div class="content">
-                <h5 class="h2 card-title text-white mb-2">Employee onboarding</h5>
+                <h3 class="card-title text-white mb-3">Employee onboarding</h3>
                 <p class="card-description">Automatically give employees access to all they need.</p>
                 <a href="/onboarding" class="link-white font-weight-bold">Learn more</a>
               </div>
             </div>
           </div>
 	  </div>
-        <div class="col-lg-5">
+        <div class="col-lg-4">
           <div class="card text-white bg-primary">
             <img class="card-img" src="./assets/img/ill/inn.svg" alt="Card image">
             <div class="card-img-overlay d-flex align-items-center">
               <div class="content">
-                <h5 class="h2 card-title text-white mb-2">Passwordless access</h5>
+                <h3 class="card-title text-white mb-3">Passwordless access</h3>
                 <p class="card-description">Manage who and how gets access to applications.</p>
-                <a class="link-white font-weight-bold">Learn more</a>
+                <a href="/access" class="link-white font-weight-bold">Learn more</a>
               </div>
             </div>
           </div>
@@ -58,25 +57,25 @@ featured_image: /assets/img/home-background/home-background.jpg
 	</div>
 
 	<div class="row justify-content-center">
-        <div class="col-lg-5">
+        <div class="col-lg-4">
           <div class="card text-white bg-success">
             <img class="card-img" src="./assets/img/ill/inn.svg" alt="Card image">
             <div class="card-img-overlay d-flex align-items-center">
               <div class="content">
-                <h5 class="h2 card-title text-white mb-2">Application visibility</h5>
+                <h3 class="card-title text-white mb-3">Application visibility</h3>
                 <p class="card-description">Learn how applications are used and how much you spend.</p>
                 <a class="link-white font-weight-bold">Coming soon</a>
               </div>
             </div>
           </div>
         </div>
-          <div class="col-lg-5">
+          <div class="col-lg-4">
             <div class="card text-white bg-info">
               <img class="card-img" src="./assets/img/ill/inn.svg" alt="Card image">
               <div class="card-img-overlay d-flex align-items-center">
                 <div class="content">
-                  <h5 class="h2 card-title text-white mb-2">Employee experience</h5>
-                  <p class="card-description">Make your employees more productive with mobile tools.</p>
+                  <h3 class="card-title text-white mb-3">Zero trust security</h3>
+                  <p class="card-description">Secure user devices accessing corporate applications.</p>
                   <a class="link-white font-weight-bold">Coming soon</a>
                 </div>
               </div>
@@ -92,7 +91,7 @@ featured_image: /assets/img/home-background/home-background.jpg
   <div class="container">
     <div class="row">
       <div class="col-lg-12 mx-auto text-center mt-7 mb-7">
-        <h3 class="display-1">Experience a better way to manage your applications.</h3>
+        <h3 class="display-2">Experience a <span class="font-tertiary-large" style="display: inline; color: #3E79F1;">better way</span> to manage your applications.</h3>
        </div>
     </div>
 </div>
@@ -130,7 +129,6 @@ featured_image: /assets/img/home-background/home-background.jpg
             <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
               <div class="card-body opacity-8">idemeum connects to your HR system to automatically onboard employees without IT admin involvement. Ask an employee to install mobile app and self-onboard into your organization. No need to distribute passwords, no need to manually provision applications. We take care of that.
               </div>
-			  <a href="/onboarding" class="link-white font-weight-bold">Learn more</a>
             </div>
           </div>
           <div class="card">
@@ -167,7 +165,7 @@ featured_image: /assets/img/home-background/home-background.jpg
             <div class="card-header" id="headingFour">
               <h5 class="mb-0">
                 <button class="btn btn-link w-100 text-primary text-left" type="button" data-toggle="collapse" data-target="#collapseFour" aria-controls="collapseFour">
-                  Employee experience
+                  Zero trust security
                   <i class="ni ni-bold-down float-right"></i>
                 </button>
               </h5>
@@ -175,7 +173,7 @@ featured_image: /assets/img/home-background/home-background.jpg
 
             <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
               <div class="card-body opacity-8">
-                Make your employees more productive with mobile first experiences, such as SSO application catalog on a mobile device. 
+                Secure user devices accessing corporate applications with conditional access. 
               </div>
             </div>
           </div>
